--- a/app/globals.css
+++ b/app/globals.css
@@ -8,7 +8,7 @@ html {
     background-image: url('/rdbg.png'); /* public 폴더의 경로 */
     background-size: cover; /* 배경 이미지가 화면을 가득 채우도록 설정 */
     background-position: center; /* 배경 이미지의 위치를 중앙으로 설정 */
-    background-repeat: no-repeat; /* 배경 이미지 반복 방지 */
+    background-repeat: repeat-y; /* 배경 이미지 반복 방지 */
     text-align: center;
     position: relative; /* 자식 요소의 절대 위치를 기준으로 설정 */
     height: 100vh; /* 전체 화면 높이 설정 */
@@ -37,6 +37,7 @@ html {
 }
 
 .ModalBoxDetail {
+    background-image: url('/계산기사진.png');
     padding: 3rem;
     width: 50rem;
     border-radius: 3rem;
@@ -45,6 +46,18 @@ html {
         width: 32px;
         height: 32px;
     } */
+}
+
+.calitem {
+    width: 23%;
+    display: flex;
+    justify-content: space-between;
+}
+
+@media (max-width: 900px){
+    .calitem{
+    width: 50%
+    }
 }
 
 @media (max-width: 900px){
