--- a/app/globals.css
+++ b/app/globals.css
@@ -14,6 +14,10 @@ html {
     height: 100vh; /* 전체 화면 높이 설정 */
 }
 
+.warpText {
+    color: #ffffcc;
+}
+
 .mainImg {
     width: 120px;
     height: 120px;
