--- a/app/globals.css
+++ b/app/globals.css
@@ -5,27 +5,57 @@ html {
     font-family: "Poetsen One", sans-serif;
     font-weight: 400;
     font-style: normal;
-    background-image: url('/rdbg.png'); /* public 폴더의 경로 */
-    background-size: cover; /* 배경 이미지가 화면을 가득 채우도록 설정 */
-    background-position: center; /* 배경 이미지의 위치를 중앙으로 설정 */
-    background-repeat: repeat-y; /* 배경 이미지 반복 방지 */
+    background-image: url('/rdbg.png');
+    background-size: cover;
+    background-position: center; 
+    background-repeat: repeat-y; 
     text-align: center;
-    position: relative; /* 자식 요소의 절대 위치를 기준으로 설정 */
-    height: 100vh; /* 전체 화면 높이 설정 */
+    position: relative; 
+    height: 100vh; 
+}
+
+.calImg {
+    background-image: url('/calculate.png');
+    background-size: cover;
+    background-position: center; 
+    background-repeat: repeat-y;
+    border-radius: 20px;
+    width: 200px;
+    height: 200px;
+}
+
+.weaponImg {
+    background-image: url('/weapon.png');
+    background-size: cover;
+    background-position: center; 
+    background-repeat: repeat-y;
+    border-radius: 20px;
+    width: 200px;
+    height: 200px;
+}
+
+.questImg {
+    background-image: url('/none');
+    background-size: cover;
+    background-position: center; 
+    background-repeat: repeat-y;
+    border-radius: 20px;
+    width: 200px;
+    height: 200px;
+}
+
+.cycleImg {
+    background-image: url('/none');
+    background-size: cover;
+    background-position: center; 
+    background-repeat: repeat-y;
+    border-radius: 20px;
+    width: 200px;
+    height: 200px;
 }
 
 .warpText {
     color: #ffffcc;
-}
-
-.mainImg {
-    width: 120px;
-    height: 120px;
-}
-
-.calImg {
-    width: 32px;
-    height: 32px;
 }
 
 .BackModalBox {
@@ -59,13 +89,23 @@ html {
 }
 
 @media (max-width: 900px){
-    .calitem{
-    width: 50%
-    }
-}
-
-@media (max-width: 900px){
     .mobile-flex{
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+    }
+    .mobile-flex{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: 10px;
+    }
+    .calitem{
+        width: 50%;
+    }
+    .mobile_top {
+        margin-top: 10px;
+        margin-bottom: 10px;
     }
 }
