--- a/app/globals.css
+++ b/app/globals.css
@@ -5,22 +5,23 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --foreground-rgb: 255, 255, 255;
+  --background-start-rgb: 17, 24, 39;
+  --background-end-rgb: 31, 41, 55;
 }
 
 html {
     font-family: "Poetsen One", sans-serif;
     font-weight: 400;
     font-style: normal;
-    background-image: url('/rdbg.png');
+    background: linear-gradient(to bottom, rgb(var(--background-start-rgb)), rgb(var(--background-end-rgb)));
     background-size: cover;
     background-position: center; 
-    background-repeat: repeat-y; 
+    background-repeat: no-repeat; 
     text-align: center;
     position: relative; 
-    height: 100vh; 
+    min-height: 100vh; 
+    color: rgb(var(--foreground-rgb));
 }
 
 .calImg {
@@ -64,31 +65,29 @@ html {
 }
 
 .warpText {
-    color: #ffffcc;
+    color: #ffffff;
 }
 
 .BackModalBox {
     position: fixed;
-	top: 0;
+    top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-	background-color: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.8);
+    backdrop-filter: blur(4px);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .ModalBoxDetail {
-    background-image: url('/계산기사진.png');
+    background: linear-gradient(145deg, #2d3748, #1a202c);
     padding: 3rem;
     width: 50rem;
     border-radius: 3rem;
-    background-color: #ccccff;
-    /* > img {
-        width: 32px;
-        height: 32px;
-    } */
+    border: 1px solid rgba(139, 92, 246, 0.2);
+    box-shadow: 0 0 20px rgba(139, 92, 246, 0.1);
 }
 
 .calitem {
